# ai-gateway

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  structure.txt
app/api/: dependencies.py
app/api/routes/: cache.py  chat.py  embeddings.py  log_in.py
app/core/: config.py  constants.py  logging.py  security.py
app/core/models/: cache_models.py  request_models.py  response_models.py
app/db/: chroma_client.py  postgres.py  response_store.py
app/middleware/: auth_middleware.py  logging_middleware.py  rate_limit_middleware.py
app/models/: request_models.py  token_model.py  user_log_req_model.py
app/services/auth/: auth_service.py  log_service.py  registration_service.py  user_credentials.txt
app/services/cache/: cache_manager.py  exact_cache.py  semantic_cache.py  similarity.py
app/services/embeddings/: embedding_service.py  providers.py
app/services/llm/: anthropic_service.py  openai_service.py  router.py
app/utils/: helpers.py  token_counter.py
docker/: docker-compose.yml
docs/: api_reference.md  architecture.md  cache_design.md
embading/: embading.py  pydantic_datatypes.py  test.py  vector_store.py
grp_llm/: models.py
scripts/: benchmark.py  populate_cache.py
tests/: log_in_test.py  overall_test.py  test_cache.py
