[project]
name = "ai_gateway"
version = "0.1.0"
description = "AI gateway application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10",
    "python-dotenv>=1.0",
    "chromadb>=0.4.0",
    "langchain>=0.0.300",
    "langchain-huggingface>=0.0.1",
    "langchain-google-genai>=0.0.1",
    "langchain-openrouter>=0.0.1",
    "langchain-groq>=0.0.1"
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
